# odbc-cli

./: .gitignore  Cargo.toml  Dockerfile  README.md  alpine.Dockerfile  docker-compose.yml
.github/workflows/: build-and-release.yml
src/: error.rs  main.rs
